--- a/package.json
+++ b/package.json
@@ -1,8 +1,34 @@
 {
   "name": "ts-ui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "author": "Taylor Byk Schinvelski @taylorbyks",
+  "description": "The UI builded by Taylor Schinvelski",
+  "homepage": "https://taylorbyks.github.io/ts-ui/",
+  "version": "0.1.0",
+  "license": "UNLICENSED",
+  "reppository": {
+    "type": "git",
+    "url": "https://github.com/taylorbyks/ts-ui"
+  },
+  "peerDependencies": {
+    "@radix-ui/react-checkbox": "^1.0.0",
+    "@radix-ui/react-slot": "^1.0.0",
+    "clsx": "^1.2.1",
+    "phosphor-react": "^1.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "files": [
+      "dist"
+  ],
+  "main": "./dist/ts-ui.umd.js",
+  "module": "./dist/ts-ui.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+      ".": {
+          "import": "./dist/ts-ui.es.js",
+          "require": "./dist/ts-ui.umd.js"
+      }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -21,14 +47,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@storybook/addon-a11y": "^6.5.12",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
     "@storybook/addon-links": "^6.5.12",
     "@storybook/builder-vite": "^0.2.4",
     "@storybook/react": "^6.5.12",
-    "@storybook/testing-library": "^0.0.13",
     "@storybook/storybook-deployer": "^2.8.12",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
@@ -37,6 +64,7 @@
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-dts": "^1.6.6"
   }
 }
