--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "@taylorbyks/ts-ui",
+  "name": "@taylorbyks/ui",
   "author": "Taylor Byk Schinvelski @taylorbyks",
   "description": "The UI builded by Taylor Schinvelski",
-  "homepage": "https://taylorbyks.github.io/ts-ui/",
-  "version": "0.1.2",
+  "homepage": "https://taylorbyks.github.io/ui/",
+  "version": "0.1.0",
   "license": "UNLICENSED",
   "reppository": {
     "type": "git",
-    "url": "https://github.com/taylorbyks/ts-ui"
+    "url": "https://github.com/taylorbyks/ui"
   },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com"
+  },
+  "main": "./dist/ui.umd.js",
+  "module": "./dist/ui.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/ui.umd.js",
+      "import": "./dist/ui.es.js"
+    },
+     "./dist/style.css": "./dist/style.css"
+  },
+  "sideEffects": false,
+
+  "files": [
+    "dist"
+  ],
   "peerDependencies": {
     "@radix-ui/react-checkbox": "^1.0.0",
     "@radix-ui/react-slot": "^1.0.0",
     "clsx": "^1.2.1",
     "phosphor-react": "^1.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "files": [
-      "dist"
-  ],
-  "main": "./dist/ts-ui.umd.js",
-  "module": "./dist/ts-ui.es.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-      ".": {
-          "import": "./dist/ts-ui.es.js",
-          "require": "./dist/ts-ui.umd.js"
-      }
+    "react": "^18.2.0"
   },
   "scripts": {
     "dev": "vite",
