--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16
+          always-auth: true
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install Dependencies
