--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/taylorbyks/ui"
   },
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   },
   "main": "./dist/ui.umd.js",
   "module": "./dist/ui.es.js",
@@ -20,10 +20,9 @@
       "require": "./dist/ui.umd.js",
       "import": "./dist/ui.es.js"
     },
-     "./dist/style.css": "./dist/style.css"
+    "./dist/style.css": "./dist/style.css"
   },
   "sideEffects": false,
-
   "files": [
     "dist"
   ],
@@ -47,7 +46,8 @@
     "@radix-ui/react-slot": "^1.0.0",
     "clsx": "^1.2.1",
     "phosphor-react": "^1.4.1",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
