--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -27,6 +27,6 @@ jobs:
         run: yarn build
 
       - name: Deploy to NPM
-        run: yarn publish
+        run: yarn publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
