--- a/package.json
+++ b/package.json
@@ -1,74 +1,17 @@
 {
-  "name": "@taylorbyks/ui",
-  "author": "Taylor Byk Schinvelski @taylorbyks",
-  "description": "The UI builded by Taylor Schinvelski",
-  "homepage": "https://taylorbyks.github.io/ui/",
-  "version": "0.1.1",
-  "license": "UNLICENSED",
-  "reppository": {
-    "type": "git",
-    "url": "https://github.com/taylorbyks/ui"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  },
-  "main": "./dist/ui.umd.js",
-  "module": "./dist/ui.es.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/ui.umd.js",
-      "import": "./dist/ui.es.js"
-    },
-    "./dist/style.css": "./dist/style.css"
-  },
-  "sideEffects": false,
-  "files": [
-    "dist"
+  "private": true,
+  "workspaces": [
+    "packages/*"
   ],
-  "peerDependencies": {
-    "@radix-ui/react-checkbox": "^1.0.0",
-    "@radix-ui/react-slot": "^1.0.0",
-    "clsx": "^1.2.1",
-    "phosphor-react": "^1.4.1",
-    "react": "^18.2.0"
-  },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "deploy-storybook": "storybook-to-ghpages"
-  },
-  "dependencies": {
-    "@radix-ui/react-checkbox": "^1.0.0",
-    "@radix-ui/react-slot": "^1.0.0",
-    "clsx": "^1.2.1",
-    "phosphor-react": "^1.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "dev": "turbo run dev --parallel",
+    "build": "turbo run build",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build --filter=!docs && changeset publish"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@storybook/addon-a11y": "^6.5.12",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
-    "@storybook/addon-interactions": "^6.5.12",
-    "@storybook/addon-links": "^6.5.12",
-    "@storybook/builder-vite": "^0.2.4",
-    "@storybook/react": "^6.5.12",
-    "@storybook/storybook-deployer": "^2.8.12",
-    "@storybook/testing-library": "^0.0.13",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "autoprefixer": "^10.4.12",
-    "babel-loader": "^8.2.5",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0",
-    "vite-plugin-dts": "^1.6.6"
+    "@changesets/cli": "^2.25.0",
+    "turbo": "^1.5.5"
   }
 }
